app/css/app.css
/* app css stylesheet */

/* BASIC
============================================================================= */

[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
    display: none !important;
}
html, body {
    width: 100%;
    height: 100%;
    font-family: "Source Sans Pro", Helvetica, Arial, sans-serif;
}
.sk-container {
    margin: 0 20px;
}
.career-selector {
    text-align: center;
}
.sk-page-content {
    position: absolute;
    top: 50px;
    left: 0;
    right: 0;
    bottom: 0;
    /*visibility: hidden;*/
    overflow: hidden;
    background-color: white;
    backface-visibility: hidden;
    transform: translate3d(0, 0, 0);
}
.sk-table-cell {
    display: table-cell;
    vertical-align: middle;
}
/* NAVIGATION
============================================================================= */

.sk-navbar-background {
    width: 100%;
    height: 50px;
    background-color: #f8f8f8;
}
.sk-navbar {
    height: 50px;
    position: relative;
}
/* height must equal 50px */

.sk-navbar-header {
    display: inline-block;
    float: left;
    padding: 15px 15px 15px 0;
    font-size: 28px;
    line-height: 20px;
}
.sk-navbar-options {
    height: 50px;
    margin: 0;
    list-style-type: none;
    display: inline-block;
}
.sk-navbar-options li {
    float: left;
    padding: 15px 10px;
    font-size: 16px;
    line-height: 20px;
}
/* height must equal 50px */

.sk-navbar-options li > a {
    padding: 15px 15px;
    font-size: 16px;
    line-height: 20px;
}
.sk-navbar-options li > a:hover {
    background-color: #eee;
}
.sk-navbar-link {
    text-decoration: none;
    color: #0ca4e0;
}
.sk-navbar-link:visited {
    text-decoration: none;
}
.sk-navbar-link:hover {
    text-decoration: underline;
}
/* SELECTOR
============================================================================= */

.sk-career-selector {
    padding: 20px 0;
    display: table;
    text-align: center;
}
.sk-career-selector-content {
    display: table-row;
}
.sk-overflow-table-cell {
    /* does not include margin or padding. Height of multiselect
    with 3 rows of careers selected (4 careers per row) on a typical  
    laptop is 113px. Add 2px so scrollbar does not appear for 3 rows. */
    max-height: 115px;
    overflow: auto;
}
.sk-multi-select-container {
    min-width: 450px;
}
.sk-button-container, .sk-multi-select-error {
    padding-left: 0.5rem;
}
.sk-multi-select-error {
    color: red;
}
.sk-button {
    margin: 5px;
    padding: 5px 10px;
    background: #0ca4e0;
    color: white;
    vertical-align: middle;
    -webkit-border-radius: 8px;
    -moz-border: radius: 8px;
    border-radius: 8px;
    -webkit-box-shadow: rgba(212, 197, 197, 1) 0 1px 0;
   -moz-box-shadow: rgba(212, 197, 197, 1) 0 1px 0;
   box-shadow: rgba(212, 197, 197, 1) 0 1px 0;
   text-shadow: rgba(0,0,0,.4) 0 1px 0;
}
.sk-button:hover:enabled {
   background: #0678A5;
}

.sk-button:active:enabled {
    background: #085E80;
}

.sk-button:disabled {
    opacity: 0.2;
}

/* CHART
============================================================================= */

/* .sk-career-selector has a total height of 172px */

.sk-career-visualizer-container {
    position: absolute;
    top: 154px;
    right: 0;
    bottom: 0;
    left: 0;
}
.sk-career-visualizer {
    width: 100%;
    height: 100%;
}
.sk-chart-svg {
    width: 100%;
    height: 100%;
}
.axis path, .axis line {
    fill: none;
    stroke: black;
}
.label {
    text-anchor: middle;
}
.axis text, .label {
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 14px;
}
.grid .tick {
    stroke: lightgrey;
    opacity: 0.7;
}
.grid path {
    stroke-width: 0;
}
.chart {
    background-color: white;
}
.sk-data-point {
    /* american flag blue */
    fill: #00348c;
}
.sk-data-point:hover {
    fill: #0ca4e0;
}
/* TOOLTIPS
============================================================================= */

.sk-tooltip-chart {
    width: 400px;
    line-height: 1;
    padding: 12px;
    background: #f8f8f8;
    border: 2px solid #6D6D6D;
    -webkit-box-shadow: 1px 1px 2px #808080;
    box-shadow: 1px 1px 2px #808080;
    color: black;
    -webkit-border-radius: 10px;
    border-radius: 10px;
}
.sk-tooltip-chart:after {
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: black;
    content: "\25BC";
    position: absolute;
    text-align: center;
}
.sk-tooltip-selector-parent {
    position: relative;
    height: 100%;
}
.sk-tooltip-selector {
    position: absolute;
    top: 25px;
    width: 400px;
    line-height: 1;
    padding: 12px;
    background: white;
    border: 2px solid #6D6D6D;
    -webkit-box-shadow: 1px 1px 2px #808080;
    box-shadow: 1px 1px 2px #808080;
    color: black;
    -webkit-border-radius: 10px;
    border-radius: 10px;
}
.xsk-tooltip-selector:before {
    display: inline;
    font-size: 10px;
    width: 100%;
    line-height: 1;
    color: black;
    content: "\25B2";
    position: absolute;
    text-align: center;
}
.sk-tooltip-label {
    opacity: 0.8;
}
.sk-tooltip-data {
    font-weight: bold;
    opacity: 1;
}
.sk-career-name {
    width: 100%;
    /* override h4 styling */
    margin-top: 4px;
    margin-bottom: 1rem;
    text-align: center;
    color: #0ca4e0;
}
/* LEGEND
============================================================================= */

#sk-legend-link {
    font-size: 2rem;
}
#sk-legend-link:hover {
    background-color: black;
    color: white;
}
#sk-legend-border {
    border: 1px solid black;
    fill: red;
}
.sk-legend-wrapper {
    float: left;
}
.sk-legend-content {
    width: 400px;
}
.sk-legend-careers {
    overflow: auto;
}
.sk-legend-career-id {
    font-weight: bold;
    opacity: 1;
}
.sk-legend-header {
    display: block;
    text-align: center;
    /* override h4 margin settings in font-sizes.css */
    margin: 0.5rem 0;
}
.sk-legend-bubbles-content {
    padding: 10px;
}
/* ANIMATIONS
============================================================================= */

.sk-page-content.ng-enter {
    -webkit-animation: fadeInFromRight 0.5s ease-in;
    z-index: 8888;
}
.sk-page-content.ng-leave {
    -webkit-animation: fadeOutToLeft 0.5s ease-out;
    z-index: 8887;
}
.sk-fade {
    opacity: 0;
    -webkit-transition: opacity 0.25s ease-in;
    -moz-transition: opacity 0.25s ease-in;
    -o-transition: opacity 0.25s ease-in;
    -ms-transition: opacity 0.25s ease-in;
    transition: opacity 0.25s ease-in;
}
.sk-fade.sk-in {
    opacity: 1;
}
@-webkit-keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@keyframes fadeIn {
    0% {
        opacity: 0;
    }
    100% {
        opacity: 1;
    }
}
@-webkit-keyframes fadeInFromRight {
    0% {
        opacity: 0;
        -webkit-transform: translateX(100%);
    }
    100% {
        opacity: 1;
    }
}
@keyframes fadeInFromRight {
    0% {
        opacity: 0;
        -webkit-transform: translateX(100%);
    }
    100% {
        opacity: 1;
    }
}
@-webkit-keyframes fadeOutToLeft {
    0% {} 100% {
        opacity: 0;
        -webkit-transform: translateX(-100%);
    }
}
@keyframes fadeOutToLeft {
    0% {} 100% {
        opacity: 0;
        -webkit-transform: translateX(-100%);
    }
}

